--- a/src/main/resources/app/secretaryForm.fxml
+++ b/src/main/resources/app/secretaryForm.fxml
@@ -24,7 +24,7 @@
 
                 <Button text="←"
                         onAction="#back"
-                        style="-fx-font-size: 18; -fx-background-color: transparent; -fx-cursor: hand;"/>
+                        styleClass="btn-back-outline"/>
 
                 <Label text="eDiploma"
                        style="-fx-font-size: 20; -fx-font-weight: bold; -fx-text-fill: #6c5ce7;"/>
