--- a/src/main/resources/app/writtenExamReport.fxml
+++ b/src/main/resources/app/writtenExamReport.fxml
@@ -26,11 +26,11 @@
                     <Insets bottom="20" left="30" right="30" top="20" />
                 </padding>
 
-                <Button onAction="#back" style="-fx-font-size: 18; -fx-background-color: transparent; -fx-cursor: hand;" text="←" />
+                <Button onAction="#back" text="←" styleClass="btn-back-outline" />
 
                 <Region HBox.hgrow="ALWAYS" />
 
-                <Text styleClass="app-title" text="eDiploma - Generisanje Zapisnika" />
+                <Text styleClass="app-title" text="Zapisnik o pismenom dijelu diplomskog rada" />
 
                 <Region HBox.hgrow="ALWAYS" />
 
