--- a/src/main/resources/app/statistics.fxml
+++ b/src/main/resources/app/statistics.fxml
@@ -1,14 +1,95 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.StatisticsController"
-            prefHeight="400.0" prefWidth="600.0">
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.layout.Pane?>
+<VBox alignment="TOP_CENTER" spacing="30.0" style="-fx-background-color: white;" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.StatisticsController">
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="30.0" />
+    </padding>
+    <children>
 
-</AnchorPane>
+        <GridPane hgap="20.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="33.3" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="33.3" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="33.3" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <VBox alignment="CENTER" prefHeight="130.0" styleClass="stat-card">
+                    <children>
+                        <Label styleClass="card-title1" text="AKTIVNI RADOVI" />
+                        <Label fx:id="lblActiveThesis" styleClass="card-value" text="0" />
+                    </children>
+                </VBox>
+
+                <VBox alignment="CENTER" prefHeight="130.0" styleClass="stat-card" GridPane.columnIndex="1">
+                    <children>
+                        <Label styleClass="card-title1" text="UKUPNO RADOVA" />
+                        <Label fx:id="lblTotalThesis" styleClass="card-value" text="0" />
+                    </children>
+                </VBox>
+
+                <VBox alignment="CENTER" prefHeight="130.0" styleClass="stat-card-warning" GridPane.columnIndex="2">
+                    <children>
+                        <Label styleClass="card-title1" text="KASNE PRIJAVE (&gt;90 DANA)" />
+                        <Label fx:id="lblLateThesis" styleClass="card-value-warning" text="0" />
+                    </children>
+                </VBox>
+            </children>
+        </GridPane>
+
+        <GridPane hgap="30.0" vgap="20.0" VBox.vgrow="ALWAYS">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="55.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="45.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+
+                <VBox styleClass="chart-container" VBox.vgrow="ALWAYS">
+                    <children>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0" style="-fx-border-color: #eee; -fx-border-width: 0 0 1 0; -fx-padding: 10 0 15 0;">
+                            <children>
+                                <Label styleClass="section-title" text="TOP MENTORI" style="-fx-border-width: 0; -fx-padding: 0;" />
+
+                                <Pane HBox.hgrow="ALWAYS" />
+
+                                <ComboBox fx:id="comboAcademicYear"
+                                          prefWidth="160.0"
+                                          promptText="Akademska god."
+                                          style="-fx-font-size: 13px; -fx-font-weight: normal; -fx-background-color: white; -fx-border-color: #ddd; -fx-border-radius: 4; -fx-background-radius: 4;" />
+                            </children>
+                        </HBox>
+
+                        <VBox fx:id="vboxTopMentors" spacing="10.0" VBox.vgrow="ALWAYS">
+                            <padding>
+                                <Insets top="15.0" right="10.0" />
+                            </padding>
+                        </VBox>
+                    </children>
+                </VBox>
+
+                <VBox alignment="CENTER" GridPane.columnIndex="1" styleClass="chart-container">
+                    <children>
+                        <PieChart fx:id="pieChartSekretari" labelsVisible="true" legendVisible="false" VBox.vgrow="ALWAYS" />
+                    </children>
+                </VBox>
+            </children>
+        </GridPane>
+    </children>
+</VBox>
