--- a/src/main/resources/templates/final_thesis_approval_template.html
+++ b/src/main/resources/templates/final_thesis_approval_template.html
@@ -154,7 +154,7 @@
 </table>
 
 <div class="justify content-paragraph">
-    Na osnovu člana 127. stav 1. tačka s) Statuta Univerziteta u Zenici, a u vezi s članom 206. Statuta Univerziteta u Zenici i procedurom za prijavu, odobrenje, izradu i odbranu diplomskog rada, na zahtjev {{studentNameGenitive}}, {{studentStatusGenitive}} Politehničkog fakulteta Univerziteta u Zenici, dekan Politehničkog fakulteta Univerziteta u Zenici donosi
+    Na osnovu člana 127. stav 1. tačka s) Statuta Univerziteta u Zenici, a u vezi s članom 206. Statuta Univerziteta u Zenici i procedurom za prijavu, odobrenje, izradu i odbranu diplomskog rada, na zahtjev {{studentNameGenitive}}, {{studentStatusGenitive}} Politehnič¬kog fakulteta Univerziteta u Zenici, dekan Politehničkog fakulteta Univerziteta u Zenici donosi
 </div>
 
 <div class="center title-block">
@@ -166,7 +166,7 @@
     <tr>
         <td class="num-col">1.</td>
         <td class="text-col">
-            {{studentFullName}}, {{studentStatusNominative}} na odsjeku {{departmentName}}, Politehničkog fakulteta Univerziteta u Zenici, određuje se zadatak za izradu diplomskog/završnog rada na {{studentCycle}} ciklusu studija Politehničkog fakulteta Univerziteta u Zenici, sa slijećom temom:
+            {{studentFullName}}, {{studentStatusNominative}} na odsjeku {{departmentName}}, Politehnič¬kog fakulteta Univerziteta u Zenici, određuje se zadatak za izradu diplomskog/završnog rada na {{studentCycle}} ciklusu studija Politehničkog fakulteta Univerziteta u Zenici, sa sijećom temom:
         </td>
     </tr>
 </table>
@@ -206,7 +206,7 @@
     <tr>
         <td class="num-col">5.</td>
         <td class="text-col">
-            Prilikom izrade rada kandidat/kinja se upućuje na slijedeću literaturu:
+            Prilikom izrade rada kandidat/kinja se upućuje na sijedeću literaturu:
             <br/><br/>
             <div class="dynamic-text">{{literature}}</div>
         </td>
@@ -216,7 +216,7 @@
 <div>
     <div class="explanation-title">O b r a z l o ž e n j e</div>
     <div class="justify content-paragraph">
-        <b>{{studentLastName}} {{studentFirstName}}</b> je stekao/la uslov za polaganje diplomskog/završnog rada budići da je položio/la sve ispite i ispunio/la sve obaveze.
+        <b>{{studentLastName}} {{studentFirstName}}</b> je stekao/la uslov za polaganje diplomskog/završnog rada budići da je {{examRequirement}}.
         <br/><br/>
         Dana {{applicationDate}} godine, podnio/la je Zahtjev za ozvaničenje diplomskog/završnog rada na {{studentCycle}} ciklusu studija Politehničkog fakulteta Univerziteta u Zenici, što je riješeno kao u izreci.
     </div>
@@ -228,7 +228,7 @@
 
         <td class="sig-content-col">
             Dekan<br/>
-            Politehničkog fakulteta<br/>
+            Politehnič¬kog fakulteta<br/>
             Univerziteta u Zenici
             <div class="signature-line"></div>
             {{deanName}}
