--- a/src/main/resources/templates/cycle_completion_template.html
+++ b/src/main/resources/templates/cycle_completion_template.html
@@ -329,7 +329,7 @@
                     <td>{{char17}}</td>
                 </tr>
             </table>
-            <div class="date-line">Zenica, {{issueDate}}</div>
+            <div class="date-line">Zenica, {{cycleCompletionDate}}</div>
         </td>
         <td class="sekretarijat-cell">
             Sekretarijat<br/>
@@ -363,7 +363,7 @@
 </div>
 
 <div class="form-row" style="text-align: center;">
-    <span class="input-line w-program">{{studyProgram}}</span>, dana <span class="input-line w-date-med">{{issueDate}}</span>. godine i stekao/la pravo na akademsku titulu
+    <span class="input-line w-program">{{studyProgram}}</span>, dana <span class="input-line w-date-med">{{defenseDate}}</span>. godine i stekao/la pravo na akademsku titulu
 </div>
 
 <div class="title-box">
