--- a/src/main/resources/templates/written_exam_report_template.html
+++ b/src/main/resources/templates/written_exam_report_template.html
@@ -244,8 +244,7 @@
 
     <p style="margin-top: 14px; margin-bottom: 14px; text-align: justify; line-height: 1.5;">
         Razrada teoretskog i praktičnog dijela diplomskog rada slijedila je prema utvrđenom zadatku diplomskog rada po rješenju Fakulteta br.
-        <span style="display: inline-block; border-bottom: 1px solid #000; min-width: 250px; text-align: center; font-weight: bold; padding: 0 5px;">
-        </span>
+        <span style="display: inline-block; border-bottom: 1px solid #000; min-width: 250px; text-align: center; font-weight: bold; padding: 0 5px;">{{facultyDecisionNumber}}</span>
     </p>
 
     <p style="margin-top: 10px; margin-bottom: 10px;">Komisija je konstatirala da je kandidat na vrijeme predao-la diplomski rad i da se Komisija u predviđenom roku sastala i rad pregledala.</p>
