--- a/src/main/resources/templates/defense_report_template.html
+++ b/src/main/resources/templates/defense_report_template.html
@@ -344,7 +344,7 @@
                     <td></td> <td></td> <td>-</td> <td></td> <td></td> <td></td><td>-</td> <td></td> <td></td> <td></td><td>-</td> <td></td> <td></td> <td></td> <td></td> <td>/</td> <td></td> <td></td>
                 </tr>
                 <tr class="date-row">
-                    <td colspan="14">Datum: {{defenseDate}}</td>
+                    <td colspan="14">Datum: {{defenseReportDate}}</td>
                 </tr>
             </table>
         </td>
