--- a/src/main/resources/templates/written_exam_report_template.html
+++ b/src/main/resources/templates/written_exam_report_template.html
@@ -177,7 +177,7 @@
                     <td></td> <td></td> <td>-</td> <td></td> <td></td> <td></td><td>-</td> <td></td> <td></td> <td></td><td>-</td> <td></td> <td></td> <td></td> <td></td> <td>/</td> <td></td> <td></td>
                 </tr>
                 <tr class="date-row">
-                    <td colspan="14">Datum: {{submissionDate}}</td>
+                    <td colspan="14">Datum: {{writtenReportDate}}</td>
                 </tr>
             </table>
         </td>
