--- a/src/main/resources/app/cycleCompletion.fxml
+++ b/src/main/resources/app/cycleCompletion.fxml
@@ -164,9 +164,8 @@
                             </VBox>
 
                             <VBox spacing="5" GridPane.columnIndex="1" GridPane.rowIndex="0">
-                                <Label styleClass="field-label" text="Datum izdavanja uvjerenja *" />
-                                <Label style="-fx-font-size: 11px; -fx-text-fill: gray;"
-                                       text="Prikazuje se u headeru dokumenta" />
+                                <Label styleClass="field-label" text="Datum izdavanja uvjerenja (datum u headeru)*" />
+                                <Label style="-fx-font-size: 11px; -fx-text-fill: gray;"/>
                                 <DatePicker fx:id="cycleCompletionDatePicker"
                                             promptText="Odaberite datum"
                                             styleClass="form-field" />
